--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DemoCollection</string>
-
+    <string name="cancel">取消</string>
+    <string name="scan">扫一扫</string>
 </resources>
